objects/gvp__Segment_Product_Set__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Account_Segment__c</fullName>
        <label>Account Segment</label>
        <referenceTo>gvp__Account_Segment__c</referenceTo>
        <relationshipLabel>Segment Product Sets</relationshipLabel>
        <relationshipName>Segment_Product_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Priority__c</fullName>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Product_Set__c</fullName>
        <label>Product Set</label>
        <referenceTo>gvp__Product_Set__c</referenceTo>
        <relationshipLabel>Segment Product Sets</relationshipLabel>
        <relationshipName>Segment_Product_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Products_Affirmed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products Affirmed By</label>
        <referenceTo>gvp__Survey_Bank__c</referenceTo>
        <relationshipLabel>Segment Product Sets</relationshipLabel>
        <relationshipName>Segment_Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Survey_Bank_Text__c</fullName>
        <formula>gvp__Products_Affirmed_By__r.gvp__Question_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Bank Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segment Product Set</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>gvp__All_Segment_Product_Sets</fullName>
        <columns>gvp__Product_Set__c</columns>
        <columns>NAME</columns>
        <columns>gvp__Account_Segment__c</columns>
        <columns>gvp__Products_Affirmed_By__c</columns>
        <columns>gvp__Survey_Bank_Text__c</columns>
        <columns>gvp__Priority__c</columns>
        <columns>gvp__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Segment Product Sets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPS-{000000000}</displayFormat>
        <label>Segment Product Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Product Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>